[package]
name = "exer"
version = "0.1.0"
authors = ["4afS <4afs.h1@gmail.com>"]
edition = "2018"
license = "MIT"
descripton = "A run tool that identifies the used build tool."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
