[package]
name = "exer"
version = "0.1.0"
authors = ["4afS <4afs.h1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A run tool that identifies the used build tool."
repository = "https://github.com/4afS/exer"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.31"
glob = "0.3"
regex = "1.3.1"
